[gd_scene load_steps=2 format=3 uid="uid://dqx32ytchstvp"]

[ext_resource type="Script" path="res://Scenes/Screens/Settings/settings_menu.gd" id="1_ml5jl"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ml5jl")

[node name="SettingsBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CRT_Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -54.5
offset_right = 29.0
offset_bottom = -9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "CRT"

[node name="CRT_Slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.5
offset_top = -14.5
offset_right = 153.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = 160.0
offset_right = 50.5
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 40)
theme_override_font_sizes/font_size = 52
text = "Exit"

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.5
offset_top = -121.0
offset_right = 83.5
offset_bottom = -79.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_font_sizes/font_size = 32
text = "Fullscreen"

[node name="CRT_Line_Edit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -26.5
offset_right = 288.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "100"
alignment = 1
max_length = 3

[connection signal="value_changed" from="CRT_Slider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="text_submitted" from="CRT_Line_Edit" to="." method="_on_crt_line_edit_text_submitted"]
